# qrgen

./: Cargo.toml
src/: common.rs  decode.rs  generation.rs  main.rs  solarized.rs  thing.sh
