[package]
name = "qrgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
gif = "0.12.0"
image = "0.24.7"
qrcode-generator = "4.1.9"
rand = "0.8.5"
rqrr = "0.6.0"
solarized = { git = "https://github.com/archification/solarized.git", branch = "main" }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
